# orion-error

./: .gitignore  AGENTS.md  CHANGLOG.md  Cargo.toml  README.md  cobertura.xml  code_diff.txt  error-design.md
.github/workflows/: check.yml  ci.yml
_gal/: work.gxl
docs/: CHANGELOG.md  LOGGING.md  README.md  thiserror-comparison.md  tutorial.md
docs/archive/: proposal-0.6.md
docs/error-handling/: 01-error-classification.md  02-handling-strategies.md  03-error-aggregation.md  04-handling-layers.md  05-logging-standards.md  06-best-practices.md  07-monitoring-metrics.md  08-recovery-patterns.md  README.md
examples/: first.rs  logging_example.rs  order_case.md  order_case.rs
src/: lib.rs  testcase.rs
src/core/: case.rs  context.rs  domain.rs  error.rs  mod.rs  reason.rs  stc_impl.rs  target.rs  universal.rs
src/traits/: contextual.rs  conversion.rs  mod.rs  owenance.rs
tests/: test_error_owe.rs
