[package]
name = "orion-error"
version = "0.5.5"
edition = "2021"
authors = ["wukong <sec-wukong@outlook.com>"]
description = "Struct Error for Large Project"
license = "MIT"
repository = "https://github.com/galaxy-sec/orion-error"
keywords = ["error", "utilities"]
categories = ["rust-patterns"]

[features]
default = ["log"]
# 启用 log 日志集成（与 `OperationContext` 的日志方法和 Drop 输出相关）
log = ["dep:log"]
# 预留 tracing 特性，后续可添加具体实现
tracing = []

[dependencies]
thiserror = "~2.0"
derive-getters = "~0.5"
serde = { version = "1.0", features = ["derive", "rc"] }
derive_more = { version = "2.0", features = ["full"] }
log = { version = "~0.4", optional = true }


[dev-dependencies]
parse-display-derive = "0.9.0"
serde_json = "1.0"
env_logger = "0.11"
