[package]
name = "orion-error"
version = "0.6.0"
edition = "2021"
authors = ["wukong <sec-wukong@outlook.com>"]
description = "Struct Error for Large Project"
license = "MIT"
repository = "https://github.com/galaxy-sec/orion-error"
keywords = ["error", "utilities"]
categories = ["rust-patterns"]

[features]
default = ["log"]
# 启用 log 日志集成（与 `OperationContext` 的日志方法和 Drop 输出相关）
log = ["dep:log"]
# tracing 日志集成
tracing = ["dep:tracing"]
serde = ["dep:serde"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
derive_more = { version = "2.1", features = ["from"] }
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }


[dev-dependencies]
parse-display-derive = "0.10"
serde_json = "1.0"
env_logger = "0.11"
